Fixed bloody stupid z-index bug by setting position to relative. Yeah, makes total sense.

--- a/styles/default_style.less
+++ b/styles/default_style.less
@@ -94,6 +94,7 @@ body {
             .imgTitle,
             .imgDesc,
             .imgLicence {
+                position: relative;
                 text-align: center;
                 width: 162px;
             }
